--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -216,6 +216,8 @@ $("#submit").on("click", function(event) {
     ]
     };
 
+    console.log(inputData);
+
     // Check if all questions have been answered
     var allQuestionsAnswered = true;
     for (var i = 0; i < inputData.scores.length; i++) {
