--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -203,20 +203,20 @@ $("#submit").on("click", function(event) {
     name: $("#name").val(),
     photo: $("#photo").val(),
     scores: [
-        $("#q1").val(),
-        $("#q2").val(),
-        $("#q3").val(),
-        $("#q4").val(),
-        $("#q5").val(),
-        $("#q6").val(),
-        $("#q7").val(),
-        $("#q8").val(),
-        $("#q9").val(),
-        $("#q10").val()
+        parseInt($("#q1").val()),
+        parseInt($("#q2").val()),
+        parseInt($("#q3").val()),
+        parseInt($("#q4").val()),
+        parseInt($("#q5").val()),
+        parseInt($("#q6").val()),
+        parseInt($("#q7").val()),
+        parseInt($("#q8").val()),
+        parseInt($("#q9").val()),
+        parseInt($("#q10").val())
     ]
     };
 
-    console.log(inputData);
+    console.log("Data sent to server: ", inputData);
 
     // Check if all questions have been answered
     var allQuestionsAnswered = true;
@@ -240,7 +240,7 @@ $("#submit").on("click", function(event) {
         // Post the data to the friends API
         $.post("/api/friends", inputData, function(data) {
             
-        console.log(data);
+        console.log("Best match from the server: ", data);
 
         $("#background").show();
         $("#modal").show();
